--- a/style.css
+++ b/style.css
@@ -34,26 +34,40 @@
     /* Font properties */
     html {
         /* font-family: var(--ff-sans); */
-        font-family: 'Poppins', sans-serif;
+        /* font-family: 'Poppins', sans-serif; */
 
-        font-weight: var(--fw-normal);
+        /* font-weight: var(--fw-normal); */
         line-height: 1.7;
-        color: var(--clr-neutral-900);
+        color: var(--clr-neutral-400);
     }
 
     body {
         margin: 0;
         /* font-family: 'Poppins', sans-serif; */
         font-family: var(--ff-sans);
+        font-weight: var(--fw-normal);
+        /* line-height: 1.7; */
+        color: var(--clr-neutral-400);
     }
 
     h1,
     h2,
     h3 {
-        line-height: 1.1;
         color: var(--clr-neutral-900);
+        line-height: 1.1;
     }
 
-    .wrapper {}
+}
 
+
+/* Wrapper for the cards */
+.wrapper {
+    max-width: 1100px;
+    margin-inline: auto;
+}
+
+
+/* wrapper styles for narrow */
+.wrapper--narrow {
+    max-width: 550px;
 }
