--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@
 
     body {
         margin: 0;
+        padding-block-end: 5rem;
         /* font-family: 'Poppins', sans-serif; */
         font-family: var(--ff-sans);
         font-weight: var(--fw-normal);
@@ -103,7 +104,8 @@ header {
 /* col class */
 .col {
     display: grid;
-    gap: 5rem;
+    align-content: center;
+    gap: var(--gap);
 }
 
 /* Card class for visualization */
