--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 /* STEP ONE: set up custom properties */
-/* STEP ONE: set up custom properties */
 :root {
     /*? Font style and weight styles */
     --ff-sans: 'Poppins', 'sans-serif';
@@ -26,7 +25,7 @@
     --clr-blue: hsl(212, 75%, 62%);
     --clr-yellow: hsl(34, 89%, 65%);
 
-
+    /* STEP TWO: CSS clear */
     /* Box Sizing */
     *,
     *::before,
@@ -34,6 +33,7 @@
         box-sizing: border-box;
     }
 
+    /* STEP THREE: add font-styles */
     /* Font properties */
     html {
         /* font-family: var(--ff-sans); */
@@ -44,6 +44,7 @@
         color: var(--clr-neutral-400);
     }
 
+    /* STEP FOUR: styling the body, wrapper, flex and cards. */
     body {
         margin: 0;
         padding-block-end: 5rem;
@@ -65,7 +66,8 @@
 
 /* Wrapper for the cards */
 .wrapper {
-    max-width: 1100px;
+    padding-inline: 2rem;
+    max-width: 1280px;
     margin-inline: auto;
 }
 
@@ -101,9 +103,16 @@ header>p {
 /* layout styles */
 .layout-grid {
     --gap: 2rem;
-    display: flex;
+    display: grid;
     gap: var(--gap);
 }
+
+@media(min-width: 800px) {
+    .layout-grid {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
 
 
 /* ? Columns are different height what do you do fix it? */
@@ -122,7 +131,7 @@ header>p {
     gap: var(--gap);
 }
 
-/* Card class for visualization */
+/* Card styles */
 
 .card {
     /* ? local scope variable */
@@ -139,12 +148,19 @@ header>p {
 
 } */
 
-/* Card title styles */
+/* Card BEM styles */
 
 .card__title {
     font-size: var(--fs-600);
     margin: 0;
 
+}
+
+.card__img {
+    /* ? Image reset: for margin auto to work it CANNOT be an inline element. Imgs are inline. */
+    display: block;
+    margin-left: auto;
+    margin-top: 2rem;
 }
 
 
